php artisan dusk:install

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
+        "laravel/dusk": "^8.2",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
