--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.453.0",
+        "react-dropzone": "^14.2.10",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7"
     }
