--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "forceConsistentCasingInFileNames": true,
         "skipLibCheck": true,
         "noEmit": true,
+        "noImplicitAny": false,
         "paths": {
             "@/*": ["./resources/js/*"],
             "ziggy-js": ["./vendor/tightenco/ziggy"]
