we can ingest pdf

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/pdf-to-text": "^1.54",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
