--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.453.0",
         "react-dropzone": "^14.2.10",
+        "react-markdown": "^9.0.1",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "zustand": "^5.0.0"
