composer require spatie/laravel-markdown

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-markdown": "^2.5",
         "spatie/pdf-to-text": "^1.54",
         "tightenco/ziggy": "^2.0"
     },
