--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^2.0.0",
     "@inertiajs/react": "^2.0.0-beta.2",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
