--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.453.0",
     "react-dropzone": "^14.2.10",
     "react-markdown": "^9.0.1",
+    "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
