--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "@sanity/block-tools": "^3.62.2",
     "ai": "^3.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
