--- a/spec.yaml
+++ b/spec.yaml
@@ -5,7 +5,7 @@ services:
     dockerfile_path: Dockerfile
     source_dir: .
     github:
-      branch: setup
+      branch: main
       deploy_on_push: true
       repo: OpenAgentsInc/openagents
     health_check:
