--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 actix-web = "4.4"
 actix-files = "0.6"
 actix-cors = "0.6"
+actix-service = "2.0"
 env_logger = "0.10"
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
+mime = "0.3"
