--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
-mime_guess = "2.0"
+mime = "0.3"
