Update esbuild format to 'iife' with global names in `build-ndk` and `build` recipes for better module compatibility.

--- a/static/justfile
+++ b/static/justfile
@@ -11,20 +11,20 @@ create-dist:
 
 # Build NDK
 build-ndk:
-    esbuild ndk.ts --bundle --format=esm --platform=browser --outfile=dist/ndk.js --sourcemap
+    esbuild ndk.ts --bundle --format=iife --global-name=NDKLib --platform=browser --outfile=dist/ndk.js --sourcemap
 
 # Build all TypeScript files
 build: clean create-dist build-ndk
     # Build the original nostr-sub
-    esbuild nostr-sub.ts --bundle --format=esm --platform=browser --outfile=dist/nostr-sub.js --sourcemap
+    esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap
     # Build the new nostr chat extension
-    esbuild nostr/nostr-chat.ts --bundle --format=esm --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap
+    esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap
 
 # Watch files for changes and rebuild
 watch:
-    esbuild ndk.ts --bundle --format=esm --platform=browser --outfile=dist/ndk.js --sourcemap --watch &
-    esbuild nostr-sub.ts --bundle --format=esm --platform=browser --outfile=dist/nostr-sub.js --sourcemap --watch &
-    esbuild nostr/nostr-chat.ts --bundle --format=esm --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --watch
+    esbuild ndk.ts --bundle --format=iife --global-name=NDKLib --platform=browser --outfile=dist/ndk.js --sourcemap --watch &
+    esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap --watch &
+    esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --watch
 
 # Serve the static directory (requires python3)
 serve:
@@ -36,9 +36,9 @@ dev: clean create-dist
 
 # Build for production with optimizations
 prod: clean create-dist
-    esbuild ndk.ts --bundle --format=esm --platform=browser --outfile=dist/ndk.js --sourcemap --minify
-    esbuild nostr-sub.ts --bundle --format=esm --platform=browser --outfile=dist/nostr-sub.js --sourcemap --minify
-    esbuild nostr/nostr-chat.ts --bundle --format=esm --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --minify
+    esbuild ndk.ts --bundle --format=iife --global-name=NDKLib --platform=browser --outfile=dist/ndk.js --sourcemap --minify
+    esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap --minify
+    esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --minify
 
 # Copy static assets
 assets: create-dist
