Add basic NIP28 chat integration (#516)
* Create file docs/htmx-nostr-chat.md

* Create file static/nostr/types.ts

* Create file static/nostr/storage.ts

* Create file static/nostr/nostr-chat.ts

* Create file static/nostr/example.html

* Refactor server initialization to attempt starting on incremental ports up to 10 retries on failure.

* No changes detected between the old and new content in `main.rs`.

* Add NDKNip07Signer import and window.nostr methods for enhanced signing capabilities in nostr-chat.ts.

* Enabled NDKNip07Signer and added it as a signer in NDK configuration.

* Refactor build process in justfile: Add default, clean, and create-dist tasks, and extend build task to include nostr-chat extension.

* Updated script sources and added Mustache for templating in `example.html` to enhance client-side rendering.

* Update justfile: Add build-ndk target, refactor create-dist to include nostr subdir, and integrate build-ndk into main build process.

* Updated example.html to improve accessibility by adding lang attribute to HTML tag.

* Update esbuild format to 'iife' with global names in `build-ndk` and `build` recipes for better module compatibility.

* Refactor `nostr-chat.ts`: remove redundant import, add `ndk` to `window` global definition for better integration.

* Refactor ndk.ts to remove TypeScript ignores and properly declare global NDK instance using TypeScript's global interface. Removed unnecessary export and fallback logic for window.ndk.

* Removed unused `ndk.ts` import to streamline `nostr-sub.ts` dependencies.

* Refactor NostrChat class: removed unused imports to streamline code.

* Updated example.html to correct language attribute from 'en' to 'es' for improved localization.

* Refactor `NostrChat` class: maintain existing imports and declarations; no change in functionality observed.

* Updated example.html to include HTML5 doctype for standards compliance.

* Updated `types.ts` by adding op

--- a/static/justfile
+++ b/static/justfile
@@ -1,2 +1,49 @@
-build:
-    esbuild --bundle nostr-sub.ts --outdir=dist --sourcemap
+# Default recipe to run when just is called without arguments
+default: build
+
+# Clean the dist directory
+clean:
+    rm -rf dist
+
+# Create dist directory if it doesn't exist
+create-dist:
+    mkdir -p dist/nostr
+
+# Build NDK
+build-ndk:
+    esbuild ndk.ts --bundle --format=iife --global-name=NDKLib --platform=browser --outfile=dist/ndk.js --sourcemap
+
+# Build all TypeScript files
+build: clean create-dist build-ndk
+    # Build the original nostr-sub
+    esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap
+    # Build the new nostr chat extension
+    esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap
+
+# Watch files for changes and rebuild
+watch:
+    esbuild ndk.ts --bundle --format=iife --global-name=NDKLib --platform=browser --outfile=dist/ndk.js --sourcemap --watch &
+    esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap --watch &
+    esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --watch
+
+# Serve the static directory (requires python3)
+serve:
+    python3 -m http.server 8000
+
+# Development mode: watch files and serve
+dev: clean create-dist
+    just watch & just serve
+
+# Build for production with optimizations
+prod: clean create-dist
+    esbuild ndk.ts --bundle --format=iife --global-name=NDKLib --platform=browser --outfile=dist/ndk.js --sourcemap --minify
+    esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap --minify
+    esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --minify
+
+# Copy static assets
+assets: create-dist
+    cp nostr/example.html dist/nostr/
+    cp -r js dist/
+
+# Full build including assets
+all: prod assets
