--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix = "0.13"
 actix-web = "4.4"
+actix-web-actors = "4.2"
 actix-files = "0.6"
 actix-cors = "0.6"
 env_logger = "0.10"
@@ -13,3 +15,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
+uuid = { version = "1.4", features = ["v4"] }
+bitcoin_hashes = "0.12"
+secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes"] }
+lazy_static = "1.4"
