--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.10"
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde-aux = "4"
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
 uuid = { version = "1.4", features = ["v4"] }
@@ -20,3 +21,6 @@ bitcoin_hashes = "0.12"
 secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes"] }
 lazy_static = "1.4"
 sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "tls-native-tls"] }
+config = "0.13"
+secrecy = { version = "0.8", features = ["serde"] }
+tracing = { version = "0.1", features = ["log"] }
