Add connection management parameters to database config in base.yaml for improved reliability.

--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -8,3 +8,6 @@ database:
   password: "password"
   database_name: "openagents"
   require_ssl: false
+  connection_timeout_secs: 30
+  max_connection_retries: 5
+  retry_interval_secs: 5
