Add connection timeout and retry settings to database configuration in production.yaml for enhanced robustness and stability.

--- a/configuration/production.yaml
+++ b/configuration/production.yaml
@@ -2,3 +2,6 @@ application:
   host: 0.0.0.0
 database:
   require_ssl: true
+  connection_timeout_secs: 60
+  max_connection_retries: 10
+  retry_interval_secs: 10
