Add database connection resilience (#526)
* Added `std::time::Duration` import to `configuration.rs` for timeout handling in settings.

* Enhanced Database initialization with retry logic and configurable intervals in db.rs, improving robustness.

* Add `std::time::Duration` import to `main.rs` for timeout handling enhancements.

* Add connection management parameters to database config in base.yaml for improved reliability.

* Add connection timeout and retry settings to database configuration in production.yaml for enhanced robustness and stability.

* Refactor `configuration.rs` to improve code readability and maintainability without altering functionality.

* Add `info` to tracing imports and adjust logging in `Database::new_with_options`.

* Increase database connection timeout to 120s, retries to 20, and retry interval to 15s for enhanced stability.

* Refactor `configuration.rs` to remove unused `std::time::Duration` import and clean up struct definitions.

* Refactor `configuration.rs` to remove unused imports and streamline Settings struct definition.

* Removed `connection_timeout_secs` from database configuration in `base.yaml` to simplify settings.

* Removed `connection_timeout_secs` from `production.yaml` to streamline database settings.

--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -8,3 +8,5 @@ database:
   password: "password"
   database_name: "openagents"
   require_ssl: false
+  max_connection_retries: 5
+  retry_interval_secs: 5
