--- a/configuration/production.yaml
+++ b/configuration/production.yaml
@@ -1,12 +1,4 @@
 application:
-  host: "0.0.0.0"  # Explicitly quoted
+  host: 0.0.0.0
 database:
-  host: "${DATABASE_HOST:localhost}"  # Allow override from env
-  port: 5432
-  username: "${DATABASE_USER:postgres}"
-  password: "${DATABASE_PASSWORD:postgres}"
-  database_name: "${DATABASE_NAME:postgres}"
-  require_ssl: true  # Required for DigitalOcean managed databases
-  ssl_mode: "require"
-  max_connection_retries: 20
-  retry_interval_secs: 15
+  require_ssl: true
