--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,6 @@ tracing = { version = "0.1", features = ["log"] }
 url = "2.4"
 
 [dev-dependencies]
+actix-web = "4.4"
+tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
+serde_json = "1.0"
