--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ url = "2.4"
 actix-web = "4.4"
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
 serde_json = "1.0"
+lazy_static = "1.4"
