--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "openagents"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "openagents"
+
 [dependencies]
 actix = "0.13"
 actix-web = "4.4"
@@ -15,15 +22,22 @@ futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde-aux = "4"
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
 log = "0.4"
 uuid = { version = "1.4", features = ["v4"] }
 bitcoin_hashes = "0.12"
 secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes", "global-context"] }
 chrono = "0.4"
 lazy_static = "1.4"
-sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "tls-native-tls"] }
+sqlx = { version = "0.7", features = ["time", "uuid", "runtime-tokio", "postgres", "json", "tls-native-tls"] }
 config = "0.13"
 secrecy = { version = "0.8", features = ["serde"] }
 tracing = { version = "0.1", features = ["log"] }
 url = "2.4"
+time = "0.3.37"
+
+[dev-dependencies]
+actix-web = "4.4"
+tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
+serde_json = "1.0"
+lazy_static = "1.4"
