--- a/static/justfile
+++ b/static/justfile
@@ -17,14 +17,17 @@ build-ndk:
 build: clean create-dist build-ndk
     # Build the original nostr-sub
     esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap
-    # Build the new nostr chat extension
+    # Build the nostr chat extension
     esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap
+    # Build the nostr agent extension
+    esbuild nostr/nostr-agent.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-agent.js --sourcemap
 
 # Watch files for changes and rebuild
 watch:
     esbuild ndk.ts --bundle --format=iife --global-name=NDKLib --platform=browser --outfile=dist/ndk.js --sourcemap --watch &
     esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap --watch &
-    esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --watch
+    esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --watch &
+    esbuild nostr/nostr-agent.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-agent.js --sourcemap --watch
 
 # Serve the static directory (requires python3)
 serve:
@@ -39,6 +42,7 @@ prod: clean create-dist
     esbuild ndk.ts --bundle --format=iife --global-name=NDKLib --platform=browser --outfile=dist/ndk.js --sourcemap --minify
     esbuild nostr-sub.ts --bundle --format=iife --platform=browser --outfile=dist/nostr-sub.js --sourcemap --minify
     esbuild nostr/nostr-chat.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-chat.js --sourcemap --minify
+    esbuild nostr/nostr-agent.ts --bundle --format=iife --platform=browser --outfile=dist/nostr/nostr-agent.js --sourcemap --minify
 
 # Copy static assets
 assets: create-dist
