Add `hypertext` and `hypertext-macros` crates to dependencies
Update `static/index.html` to use Rust templates
* Remove Mustache template references
* Ensure header is loaded via Rust template

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,8 @@ tracing = { version = "0.1", features = ["log"] }
 url = "2.4"
 time = "0.3.37"
 anyhow = "1.0"
-hypertext = { version = "0.6.2", features = ["alloc"] }
+hypertext = "0.1.0"
+hypertext-macros = "0.1.0"
 
 [dev-dependencies]
 actix-web = "4.4"
