--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,8 @@ tracing = { version = "0.1", features = ["log"] }
 url = "2.4"
 time = "0.3.37"
 anyhow = "1.0"
-hypertext = { version = "0.6.2", features = ["alloc", "macros"] }
+hypertext-macros = "0.6.2"
+hypertext = { version = "0.6.2", features = ["alloc"] }
 
 [dev-dependencies]
 actix-web = "4.4"
