--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write --ignore-unknown ."
+    "format": "cargo fmt && prettier --write --ignore-unknown ."
   },
   "keywords": [],
   "author": "",
