--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "@tailwindcss/forms": "^0.5.7"
   }
 }
