--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "cargo fmt && prettier --write --ignore-unknown ."
+    "format": "cargo fmt && prettier --write --ignore-unknown .",
+    "build:css": "tailwindcss -i ./styles/input.css -o ./static/output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,8 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
-    "@tailwindcss/forms": "^0.5.7"
+    "@tailwindcss/forms": "^0.5.7",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35"
   }
 }
