--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ actix-web-actors = "4.2"
 actix-files = "0.6"
 actix-cors = "0.6"
 env_logger = "0.10"
-dotenv = "0.15"
+dotenvy = "0.15"  # Replacement for dotenv
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -29,8 +29,8 @@ bitcoin_hashes = "0.12"
 secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes", "global-context"] }
 chrono = "0.4"
 lazy_static = "1.4"
-sqlx = { version = "0.7", features = ["time", "uuid", "runtime-tokio", "postgres", "json", "tls-native-tls", "bigdecimal"] }
-config = "0.13"
+sqlx = { version = "0.8.1", features = ["time", "uuid", "runtime-tokio", "postgres", "json", "tls-native-tls", "bigdecimal"] }
+config = "0.14"  # Updated to latest version
 secrecy = { version = "0.8", features = ["serde"] }
 tracing = { version = "0.1", features = ["log"] }
 url = "2.4"
