--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -23,6 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: "postgres://postgres:password@localhost:5432/postgres"
+      APP_ENVIRONMENT: "production"
     services:
       postgres:
         image: postgres:14
@@ -108,6 +109,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: "postgres://postgres:password@localhost:5432/postgres"
+      APP_ENVIRONMENT: "production"
     services:
       postgres:
         image: postgres:14
