--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -23,7 +23,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: "postgres://postgres:password@localhost:5432/openagents_test"
-      APP_ENVIRONMENT: "production"
     services:
       postgres:
         image: postgres:14
@@ -75,17 +74,30 @@ jobs:
           echo "application:
             port: 8080
             host: 0.0.0.0
-            admin_token: admin-token" > configuration/base.yaml
+            admin_token: admin-token
+          environment: production" > configuration/base.yaml
           
           echo "application:
             host: 0.0.0.0
+            admin_token: admin-token
           database:
-            require_ssl: false" > configuration/production.yaml
+            require_ssl: false
+          environment: production" > configuration/production.yaml
           
           echo "application:
             host: 0.0.0.0
+            admin_token: admin-token
           database:
-            require_ssl: false" > configuration/local.yaml
+            require_ssl: false
+          environment: production" > configuration/local.yaml
+
+      - name: Verify environment
+        run: |
+          echo "APP_ENVIRONMENT=$APP_ENVIRONMENT"
+          echo "Current config files:"
+          cat configuration/base.yaml
+          cat configuration/production.yaml
+          cat configuration/local.yaml
 
       - name: Run SQLx migrations
         run: |
@@ -93,10 +105,10 @@ jobs:
           cargo sqlx migrate run
 
       - name: Run tests
-        env:
-          APP_ENVIRONMENT: "production"
-          DATABASE_URL: "postgres://postgres:password@localhost:5432/openagents_test"
-        run: cargo test
+        run: |
+          export APP_ENVIRONMENT=production
+          echo "APP_ENVIRONMENT is set to: $APP_ENVIRONMENT"
+          cargo test
 
       - name: Check that queries are fresh
         run: cargo sqlx prepare --workspace --check -- --all-targets
@@ -130,7 +142,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: "postgres://postgres:password@localhost:5432/openagents_test"
-      APP_ENVIRONMENT: "production"
     services:
       postgres:
         image: postgres:14
@@ -179,17 +190,30 @@ jobs:
           echo "application:
             port: 8080
             host: 0.0.0.0
-            admin_token: admin-token" > configuration/base.yaml
+            admin_token: admin-token
+          environment: production" > configuration/base.yaml
           
           echo "application:
             host: 0.0.0.0
+            admin_token: admin-token
           database:
-            require_ssl: false" > configuration/production.yaml
+            require_ssl: false
+          environment: production" > configuration/production.yaml
           
           echo "application:
             host: 0.0.0.0
+            admin_token: admin-token
           database:
-            require_ssl: false" > configuration/local.yaml
+            require_ssl: false
+          environment: production" > configuration/local.yaml
+
+      - name: Verify environment
+        run: |
+          echo "APP_ENVIRONMENT=$APP_ENVIRONMENT"
+          echo "Current config files:"
+          cat configuration/base.yaml
+          cat configuration/production.yaml
+          cat configuration/local.yaml
 
       - name: Run SQLx migrations
         run: |
@@ -198,13 +222,16 @@ jobs:
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
+
       - name: Generate code coverage
-        env:
-          APP_ENVIRONMENT: "production"
-          DATABASE_URL: "postgres://postgres:password@localhost:5432/openagents_test"
-        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
+        run: |
+          export APP_ENVIRONMENT=production
+          echo "APP_ENVIRONMENT is set to: $APP_ENVIRONMENT"
+          cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
+
       - name: Generate report
         run: cargo llvm-cov report --html --output-dir coverage
+
       - uses: actions/upload-artifact@v4
         with:
           name: "Coverage report"
