--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -149,6 +149,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: "postgres://postgres:password@localhost:5432/openagents_test"
+      APP_ENVIRONMENT: "production"
     services:
       postgres:
         image: postgres:14
@@ -236,9 +237,12 @@ jobs:
         uses: taiki-e/install-action@cargo-llvm-cov
 
       - name: Generate code coverage
+        env:
+          APP_ENVIRONMENT: "production"
         run: |
-          export APP_ENVIRONMENT=production
-          echo "APP_ENVIRONMENT is set to: $APP_ENVIRONMENT"
+          # Verify environment setting
+          echo "APP_ENVIRONMENT=$APP_ENVIRONMENT"
+          # Run coverage
           cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
 
       - name: Generate report
