--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,4 @@ actix-web = "4.4"
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
 serde_json = "1.0"
 lazy_static = "1.4"
+wiremock = "0.5"
