--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ url = "2.4"
 time = "0.3.37"
 anyhow = "1.0"
 askama = "0.12.1"
-axum = "0.8.1"
+axum = { version = "0.8.1", features = ["ws"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["fs"] }
