--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ tower-http = { version = "0.6.2", features = ["fs"] }
 reqwest = { version = "0.11", features = ["json"] }
 pulldown-cmark = "0.9"
 askama_escape = "0.1"
+bytes = "1.5"
 
 [dev-dependencies]
 actix-web = "4.4"
