--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ http-body-util = "0.1"
 http = "1.0"
 tokio-stream = "0.1.17"
 clap = { version = "4.4", features = ["derive"] }
+termcolor = "1.4"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
