--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# Logging level (debug, info, warn, error)
-RUST_LOG=info
+AIDER_API_KEY=
+DEEPSEEK_API_KEY=
+GITHUB_TOKEN=
 
 # Server configuration
+RUST_LOG=info # Logging level (debug, info, warn, error)
 # PORT=8080  # Uncomment to override default port
