add deepseek key

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -24,6 +24,7 @@ jobs:
     env:
       DATABASE_URL: "postgres://postgres:password@localhost:5432/openagents_test"
       AIDER_API_KEY: ${{ secrets.AIDER_API_KEY }}
+      DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
       GITHUB_TOKEN: ${{ github.token }}
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
     services:
@@ -156,6 +157,7 @@ jobs:
       DATABASE_URL: "postgres://postgres:password@localhost:5432/openagents_test"
       APP_ENVIRONMENT: "production"
       AIDER_API_KEY: ${{ secrets.AIDER_API_KEY }}
+      DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
       GITHUB_TOKEN: ${{ github.token }}
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
     services:
